# zeropad

./: Cargo.toml  LICENSE  README.md
assets/: icon.icns
src/: main.rs
