[package]
name = "egui-zeropad"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"# 最新版本的eframe
rfd = "0.15.2" # 文件对话框

[package.metadata.bundle]
name = "ZeroPad"         # 应用名称
identifier = "com.example.zeropad" # 唯一标识符
icon = "path/to/icon.icns" # 应用图标
# resources = ["path/to/resource.file"] # 额外资源文件