[package]
name = "egui-zeropad"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.30.0"# 最新版本的eframe
rfd = "0.15.2" # 文件对话框

[package.metadata.bundle]
name = "ZeroPad"         # 应用名称
identifier = "com.example.zeropad" # 唯一标识符
icon = ["assets/icon.icns"] # 应用图标
resources = ["assets/"] # 额外资源文件

[features]
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.30.0" # Metal 支持库